--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
     "url": "https://esm.sh/url@^0.11.4",
     "path": "https://esm.sh/path@^0.12.7",
     "fs": "https://esm.sh/fs@^0.0.1-security",
-    "buffer": "https://esm.sh/buffer@^6.0.3"
+    "buffer": "https://esm.sh/buffer@^6.0.3",
+    "firebase/app": "https://esm.sh/firebase@10.8.1/app",
+    "firebase/database": "https://esm.sh/firebase@10.8.1/database",
+    "firebase/": "https://esm.sh/firebase@^12.6.0/"
   }
 }
 </script>
