feat: Enhance image generation and app initialization
Introduces structured prompting for AI image generation using `buildJsonPrompt` and refactors API key handling. Updates `types.ts` to include optional `meta` property for scene metadata. Adds `./index.tsx` script to `index.html`. Adjusts character descriptions in `constants.ts` and improves system initialization logic.

--- a/index.html
+++ b/index.html
@@ -75,12 +75,14 @@
     "buffer": "https://esm.sh/buffer@^6.0.3",
     "firebase/app": "https://esm.sh/firebase@10.8.1/app",
     "firebase/database": "https://esm.sh/firebase@10.8.1/database",
-    "firebase/": "https://esm.sh/firebase@^12.6.0/"
+    "firebase/": "https://esm.sh/firebase@^12.6.0/",
+    "@/": "./"
   }
 }
 </script>
 </head>
   <body class="bg-iron-950 text-slate-300 antialiased selection:bg-copper-500 selection:text-white">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
